crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__cached_drop_does_not_suppress_tail_failure.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 1525
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nselect : list int -> bool\nselect xs =\n    let\n        dropped = Builtin.dropList 1 xs\n    in\n    if Builtin.nullList dropped then\n        Builtin.nullList (Builtin.tailList xs)\n    else False\nmain = select []\n"
---
--- unoptimized Core
let fromBool#5 : bool -> bool = \value#7 : bool -> value#7 in
let fromInt#6 : int -> int = \value#8 : int -> value#8 in
let select#2 : list int -> bool = \xs#3 : list int -> let dropped#4 : list int = dropList (fromInt#6 1) xs#3 in
case@Bool nullList dropped#4 of
  True -> let projection#9 : list int = tailList xs#3 in
  nullList projection#9
  False -> fromBool#5 false in
let main#1 : bool = select#2 (con (list integer) []) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_5
    [(lam fromInt_6
      [(lam select_2 [(lam main_1 main_1) [select_2 (con (list integer) [])]])
        (lam xs_3
          [(lam dropped_4
            (case
              [(force (builtin nullList)) dropped_4]
              [fromBool_5 (con bool False)]
              [(lam projection_9 [(force (builtin nullList)) projection_9])
                [(force (builtin tailList)) xs_3]]))
            [[(force (builtin dropList)) [fromInt_6 (con integer 1)]] xs_3]])])
      (lam value_8 value_8)])
    (lam value_7 value_7)])
--- optimized Core
let xs#14 : list int = (con (list integer) []) in
let dropped#15 : list int = dropList 1 xs#14 in
let anf#20 : bool = nullList dropped#15 in
case@Bool anf#20 of
  True -> let projection#16 : list int = tailList xs#14 in
  nullList projection#16
  False -> false
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam builtin_6
      [(lam builtin_7
        [(lam xs_1
          [(lam dropped_2
            [(lam anf_3
              (case
                anf_3
                (con bool False)
                [(lam projection_4 [builtin_5 projection_4]) [builtin_6 xs_1]]))
              [builtin_5 dropped_2]])
            [[builtin_7 (con integer 1)] xs_1]])
          (con (list integer) [])])
        (force (builtin dropList))])
      (force (builtin tailList))])
    (force (builtin nullList))])
--- result
error: Runtime(EmptyList([]))
--- logs
[]
--- budget
cpu: 274864, memory: 168
