crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__case_recursive_function_retains_branch_captures.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype choice = First unit | Second\nloop : bool -> unit\nloop =\n    case trace \"choose\" (First ()) of\n        First captured -> trace \"selected\" (\\flag -> if flag then captured else loop True)\n        Second -> \\flag -> loop flag\nmain = loop False\n"
---
--- unoptimized Core
let message#15 : string = "choose" in
let message#16 : string = "selected" in
let fromBool#3 : bool -> bool = \value#12 : bool -> value#12 in
let fromUnit#5 : unit -> unit = \value#13 : unit -> value#13 in
let fromString#6 : string -> string = \value#14 : string -> value#14 in
let match#10 : Main.choice = trace (fromString#6 message#15) in (\field#4 : unit -> constr 0 field#4) (fromUnit#5 ()) in
case@Tag match#10 of
  0 field#11 -> let captured#7 : unit = field#11 in
  trace (fromString#6 message#16) in letrec
    loop#2 : bool -> unit [static []] = \flag#8 : bool -> case@Bool flag#8 of
      True -> captured#7
      False -> loop#2 (fromBool#3 true)
  in
  let main#1 : unit = loop#2 (fromBool#3 false) in
  main#1
  1 -> letrec
    loop#2 : bool -> unit [static [0]] = \flag#9 : bool -> loop#2 flag#9
  in
  let main#1 : unit = loop#2 (fromBool#3 false) in
  main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_15
    [(lam message_16
      [(lam fromBool_3
        [(lam fromUnit_5
          [(lam fromString_6
            [(lam match_10
              (case
                match_10
                (lam field_11
                  [(lam captured_7
                    (force
                      [[(force (builtin trace)) [fromString_6 message_16]]
                        (delay
                          [(lam loop_2 [(lam main_1 main_1) [loop_2 [fromBool_3 (con bool False)]]])
                            [(lam self_17 [self_17 self_17])
                              (lam self_17
                                (lam flag_8
                                  (case flag_8 [[self_17 self_17] [fromBool_3 (con bool True)]] captured_7)))]])]))
                    field_11])
                [(lam loop_2 [(lam main_1 main_1) [loop_2 [fromBool_3 (con bool False)]]])
                  (lam flag_9
                    (force
                      [(lam self_19 [self_19 self_19])
                        (lam self_19 (delay (force [self_19 self_19])))]))]))
              (force
                [[(force (builtin trace)) [fromString_6 message_15]]
                  (delay [(lam field_4 (constr 0 field_4)) [fromUnit_5 (con unit ())]])])])
            (lam value_14 value_14)])
          (lam value_13 value_13)])
        (lam value_12 value_12)])
      (con string "selected")])
    (con string "choose")])
--- optimized Core
let match#26 : Main.choice = trace "choose" in constr 0 () in
case@Tag match#26 of
  0 field#27 -> trace "selected" in letrec
    loop#29 : bool -> unit [static []] = \flag#30 : bool -> case@Bool flag#30 of
      True -> field#27
      False -> loop#29 true
  in
  loop#29 false
  1 -> letrec
    worker#35 : @delay unit [static []] = \ -> delay (force worker#35)
  in
  force worker#35
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam match_4
      (case
        match_4
        (lam field_5
          (force
            [[builtin_13 (con string "selected")]
              (delay
                [(lam loop_9 [loop_9 (con bool False)])
                  [(lam self_6 [self_6 self_6])
                    (lam self_7
                      (lam flag_8 (case flag_8 [[self_7 self_7] (con bool True)] field_5)))]])]))
        [(lam worker_12 (force worker_12))
          [(lam self_10 [self_10 self_10])
            (lam self_11 (delay (force [self_11 self_11])))]]))
      (force [[builtin_13 (con string "choose")] (delay (constr 0 (con unit ())))])])
    (force (builtin trace))])
--- result
(con unit ())
--- logs
["choose", "selected"]
--- budget
cpu: 1447096, memory: 8464
